[gd_scene load_steps=2 format=3 uid="uid://bcld6krai32hg"]

[ext_resource type="Script" path="res://GuessingScene.gd" id="1_vc17o"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1150.0
offset_bottom = 642.0
script = ExtResource("1_vc17o")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 644.0

[node name="StoryLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Story: [The story will be displayed here]"

[node name="PlayerTurnLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "It's [Player]'s turn to guess!"

[node name="GuessOptionButton" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "submit"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_SubmitGuessButton_pressed"]
